<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>SpongeCore</artifactId>
    <packaging>jar</packaging>
    <name>The New Economy Sponge</name>

    <repositories>
        <repository>
            <id>sponge-repo</id>
            <name>Sponge Maven Repository</name>
            <url>https://repo.spongepowered.org/maven</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>



    <build>
        <defaultGoal>clean package</defaultGoal>
        <directory>target</directory>
        <outputDirectory>target/classes</outputDirectory>
        <finalName>TNE-${project.artifactId}-${project.version}</finalName>
        <testOutputDirectory>target/test-classes</testOutputDirectory>
        <sourceDirectory>src/</sourceDirectory>
        <resources>
            <resource>
                <directory>resources/</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.maven.surefire</groupId>
                        <artifactId>surefire-junit47</artifactId>
                        <version>3.0.0-M7</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <show>public</show>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <artifactSet>
                        <includes>
                            <include>net.tnemc:*</include>
                            <include>org.json.simple:*</include>
                            <include>org.yaml:*</include>
                            <include>me.carleslc.Simple-YAML:*</include>
                            <include>com.zaxxer:*</include>
                            <include>redis.clients:*</include>
                            <include>org.apache.commons:*</include>
                            <include>co.aikar:*</include>
                            <include>cloud.commandframework:*</include>
                            <include>net.kyori:*</include>
                            <include>com.github.Revxrsal.Lamp:*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>redis.clients</pattern>
                            <shadedPattern>${tne.relocation}.jedis</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.apache.commons:*</pattern>
                            <shadedPattern>${tne.relocation}.commons</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.json.simple</pattern>
                            <shadedPattern>${tne.relocation}.json</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.zaxxer</pattern>
                            <shadedPattern>${tne.relocation}.zaxxer</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>me.carleslc</pattern>
                            <pattern>org.yaml</pattern>
                            <shadedPattern>${tne.relocation}.yaml</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>net.kyori</pattern>
                            <shadedPattern>${tne.relocation}.kyori</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>cloud.commandframework</pattern>
                            <shadedPattern>${tne.relocation}.cloud</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>revxrsal</pattern>
                            <shadedPattern>${tne.relocation}.lamp</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.commands</pattern>
                            <shadedPattern>${tne.relocation}.acf</shadedPattern> <!-- Replace this -->
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.locales</pattern>
                            <shadedPattern>${tne.relocation}.locales</shadedPattern> <!-- Replace this -->
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.idb-core</pattern>
                            <shadedPattern>${tne.relocation}.idb</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>TNML-Sponge-API-7</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>net.tnemc</groupId>
                    <artifactId>TNIL-Core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>EconomyCore</artifactId>
            <version>${project.version}</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>spongeapi</artifactId>
            <version>7.4.0</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Revxrsal.Lamp</groupId>
            <artifactId>sponge</artifactId>
            <version>3.1.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-spongeapi</artifactId>
            <version>4.1.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <parent>
        <groupId>net.tnemc</groupId>
        <artifactId>TNE</artifactId>
        <version>0.1.2.4-Pre1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
</project>